--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,40 +20,40 @@ on:
       - '*'
 
 jobs:
-  build-windows:
-    defaults:
-      run:
-        working-directory: .\\build
-    strategy:
-      fail-fast: false
-      matrix:
-        name:
-          - windows_x86_64
-          - windows_arm64
-    runs-on: windows-2019
-    steps:
-    - uses: actions/checkout@v2
-    - name: Disk Cleanup
-      run: |
-        Get-PSDrive
-        # Cache 済み Docker Image の削除
-        # Clean unused docker images
-        docker rmi $(docker images -q -a)
-        # Android SDK の削除
-        # Delete Android SDK
-        Remove-Item -Recurse -Force $Env:ANDROID_HOME -ErrorAction Ignore
-        Remove-Item -Recurse -Force $Env:ANDROID_NDK_HOME -ErrorAction Ignore
-        # JVM の削除
-        # Delete JVM
-        Remove-Item -Recurse -Force $Env:JAVA_HOME_11_X64 -ErrorAction Ignore
-        Remove-Item -Recurse -Force $Env:JAVA_HOME_8_X64 -ErrorAction Ignore
-        Get-PSDrive
-    - run: "& .\\build.${{ matrix.name }}.ps1 \"${{ github.event.inputs.commitHash }}\""
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: webrtc.${{ matrix.name }}.zip
-        path: build\_package\${{ matrix.name }}\webrtc.zip
+  # build-windows:
+  #   defaults:
+  #     run:
+  #       working-directory: .\\build
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       name:
+  #         - windows_x86_64
+  #         - windows_arm64
+  #   runs-on: windows-2019
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Disk Cleanup
+  #     run: |
+  #       Get-PSDrive
+  #       # Cache 済み Docker Image の削除
+  #       # Clean unused docker images
+  #       docker rmi $(docker images -q -a)
+  #       # Android SDK の削除
+  #       # Delete Android SDK
+  #       Remove-Item -Recurse -Force $Env:ANDROID_HOME -ErrorAction Ignore
+  #       Remove-Item -Recurse -Force $Env:ANDROID_NDK_HOME -ErrorAction Ignore
+  #       # JVM の削除
+  #       # Delete JVM
+  #       Remove-Item -Recurse -Force $Env:JAVA_HOME_11_X64 -ErrorAction Ignore
+  #       Remove-Item -Recurse -Force $Env:JAVA_HOME_8_X64 -ErrorAction Ignore
+  #       Get-PSDrive
+  #   - run: "& .\\build.${{ matrix.name }}.ps1 \"${{ github.event.inputs.commitHash }}\""
+  #   - name: Upload Artifact
+  #     uses: actions/upload-artifact@v1
+  #     with:
+  #       name: webrtc.${{ matrix.name }}.zip
+  #       path: build\_package\${{ matrix.name }}\webrtc.zip
   build-macos:
     defaults:
       run:
@@ -62,8 +62,8 @@ jobs:
       fail-fast: false
       matrix:
         name:
-          - macos_arm64
-          - macos_x86_64
+          # - macos_arm64
+          # - macos_x86_64
           - ios
     runs-on: macos-11
     steps:
@@ -116,7 +116,7 @@ jobs:
     name: Create Release
     if: contains(github.ref, 'tags/m')
     needs:
-      - build-windows
+      # - build-windows
       - build-macos
       - build-linux
     runs-on: ubuntu-20.04
@@ -144,8 +144,8 @@ jobs:
       fail-fast: false
       matrix:
         name:
-          - macos_arm64
-          - macos_x86_64
+          # - macos_arm64
+          # - macos_x86_64
           - ios
           # - raspberry-pi-os_armv6
           # - raspberry-pi-os_armv7
@@ -188,40 +188,40 @@ jobs:
         asset_content_type: application/gzip
   # Windows だけ Content-Type が違うので別で記述する
   # Windows has a different Content-Type, so handle it separately.
-  upload-assets-windows:
-    strategy:
-      fail-fast: false
-      matrix:
-        name:
-          - windows_x86_64
-          - windows_arm64
-    name: Upload windows
-    if: contains(github.ref, 'tags/m')
-    needs:
-      - create-release
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Download ${{ matrix.name }}
-      uses: actions/download-artifact@v1
-      with:
-        name: webrtc.${{ matrix.name }}.zip
-    - uses: actions/download-artifact@v1
-      with:
-        name: create-release.env
-    - name: Env to output
-      shell: bash
-      run: |
-        source create-release.env/create-release.env
-        echo "::set-output name=upload_url::$UPLOAD_URL"
-      id: env
-    - name: Upload windows Release Asset
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.env.outputs.upload_url }}
-        asset_path: webrtc.${{ matrix.name }}.zip/webrtc.zip
-        asset_name: webrtc.${{ matrix.name }}.zip
-        asset_content_type: application/zip
+  # upload-assets-windows:
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       name:
+  #         - windows_x86_64
+  #         - windows_arm64
+  #   name: Upload windows
+  #   if: contains(github.ref, 'tags/m')
+  #   needs:
+  #     - create-release
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
+  #   - name: Download ${{ matrix.name }}
+  #     uses: actions/download-artifact@v1
+  #     with:
+  #       name: webrtc.${{ matrix.name }}.zip
+  #   - uses: actions/download-artifact@v1
+  #     with:
+  #       name: create-release.env
+  #   - name: Env to output
+  #     shell: bash
+  #     run: |
+  #       source create-release.env/create-release.env
+  #       echo "::set-output name=upload_url::$UPLOAD_URL"
+  #     id: env
+  #   - name: Upload windows Release Asset
+  #     uses: actions/upload-release-asset@v1.0.1
+  #     env:
+  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #     with:
+  #       upload_url: ${{ steps.env.outputs.upload_url }}
+  #       asset_path: webrtc.${{ matrix.name }}.zip/webrtc.zip
+  #       asset_name: webrtc.${{ matrix.name }}.zip
+  #       asset_content_type: application/zip
